--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <title>前端-张哲-2019</title>
 </head>
 
@@ -17,7 +16,7 @@
         </header>
         <aside>
             <div class="avatar">
-                <img src="./avator.jpg" alt="Alias">
+                <img src="./img/mamba.jpg" alt="mamba">
             </div>
 
             <section>
@@ -44,14 +43,14 @@
                                 <span>毕业时间</span>
                                 <span>2019.7</span>
                             </div>
-                        <div class="item">
+                        <!-- <div class="item">
                             <span class="mainText">Github</span>
                             <span><a href="https://github.com/mamba1202/" target="_blank">mamba1202</a></span>
                         </div>
                         <div class="item">
                             <span class="mainText">博客</span>
                             <span><a href="https://mamba1202.github.io/" target="_blank">mamba1202</a></span>
-                        </div>
+                        </div> -->
                     </div>
             </section>
 
@@ -60,12 +59,23 @@
                 <h2>专业技能</h2>
                 <div class="detail skills">
                     <p>* HTML5,CSS3,JavaScript</p>
-                    <p>* Bootstrap,Sass</p>
-                    <p>* promise,Ajax,Await/Async</p>
-                    <p>* Vue,Vue-router,Vuex</p>
-                    <p>* ES6,web存储</p>
-                    <p>* 熟悉HTTP协议</p>
+                    <p>* Vue.js,Vue-router,Vuex,Axios</p>
+                    <p>* ES6,Sass.Less</p>
+                    <p>* Webpack,Parcel,Npm Script</p>
                     <p>* 对前端有浓厚的兴趣</p>
+                </div>
+            </section>
+            <section>
+                <h2>了解更多</h2>
+                <div class="detail personal">
+                    <div class="item">
+                        <span class="mainText">GitHub</span>
+                        <span><a href="https://github.com/mamba1202/" target="_blank">mamba1202</a></span>
+                    </div>
+                    <div class="item">
+                        <span class="mainText">博客</span>
+                        <span><a href="https://mamba1202.github.io/" target="_blank">mamba1202</a></span>
+                    </div>
                 </div>
             </section>
             <section>
@@ -81,7 +91,7 @@
                         <svg>
                             <use xlink:href="#icon-email"></use>
                         </svg>
-                        <span>zhangzhe1202@fmail.com</span>
+                        <span>zhangzhe1202@foxmail.com</span>
                     </div>
                     <div class="item">
                         <svg>
@@ -97,7 +107,6 @@
                     </div>
                 </div>
             </section>
-
         </aside>
         <main>
             <section class="list protfilo">
@@ -106,7 +115,7 @@
                     <h3>① 咕噜UI</h3>
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。</span></ol>
+                        <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对前端工程化流程以及单元测试重要性的深刻理解</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li class="mainText">使用知识：Vue.js/ ES6/ SCSS/ Parcel/ Npm Scripts/ Mocha/ TravisCI /VuePress</li>
@@ -126,7 +135,8 @@
                 <div class="item">
                     <h3>② 有赞商城</h3>
                     <ul>
-                        <span class="title">项目简介:</span>仿移动端有赞商城，使用mock数据，支持地址编辑，购物车结算，查看商品，搜索商品及店铺等功能
+                        <span class="title">项目简介:</span>
+                        <ol>仿移动端有赞商城，使用mock数据，支持地址编辑，购物车结算，查看商品，搜索商品及店铺等功能</ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li class="mainText">使用语言：vue + axios + vuex + vue-router + sass + eslint + es6</li>
@@ -148,15 +158,12 @@
                 <div class="item">
                     <h3>③Cnode</h3>
                     <ul>
-                        <span class="title">项目简介:</span>一款多功能翻译小程序，<span class="mainText">支持多语言</span>，<span
-                            class="mainText">历史</span>，<span class="mainText">收藏</span>，<span
-                            class="mainText">留言</span>等功能，使用云开发与本地存储。
+                        <span class="title">项目简介:</span>
+                        <ol>该项目使用 Vue 还原 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用 Axios 获取数据，使用 Vue Router 进行前端路由的切换及传参，使用 watch 监听路由的变化，Webpack 打包。</ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li>使用<span class="mainText">web存储</span>用户搜索，用户便于查看翻译记录</li>
-                            <li>使用<span class="mainText">云开发</span>做用户收藏，用数据库进行<span class="mainText">永久存储</span></li>
-                            <li>历史与收藏<span class="mainText">页面关联</span>，可<span class="mainText">随时控制是否收藏</span></li>
-                            <li>留言页面详细<span class="mainText">记录用户信息</span>且用户可删除</li>
+                            <li>技术栈: <span class="mainText">Vue CLI/ Vue2/ Vue Router/ Axios/ ES6/ Npm/ SCSS</span></li>
+                            <li>使用<span class="mainText"> Vue Router 进行前端路由的切换及传参</span>进行页面跳转</li>
                         </ol>
                         <div class="linkwrap">
                             <a class="mainText btnLink" href="https://github.com/mamba1202/cnode"
@@ -168,23 +175,34 @@
                 <div class="item">
                     <h3>④ 翻译猿</h3>
                     <ul>
-                        <span class="title">项目简介:</span>这是一个用<span class="mainText">css3</span>向画面绘制机器猫的项目，亮点在于<span
-                            class="mainText">添加文本与绘制图形同步进行</span>，让用户直观看到整个绘制过程。
+                        <span class="title">项目简介:</span>
+                        <ol>一款提供翻译功能的微信小程序，该项目以百度翻译 API 为服务器域名提供支持，主要包含翻译首页、语言列表页和翻译历史页。项目逻辑简单，页面清新，提供了近 7 种语言选择，欢迎尝试</ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li>可选择<span class="mainText">重新绘制</span>将整个画面重置</li>
-                            <li>可<span class="mainText">加速减速控制绘制节奏</span></li>
-                            <li>可<span class="mainText">随时暂停或直接跳过</span>观看结果</li>
-                            <li>同时具有<span class="mainText">留言</span>功能，获得用户反馈</li>
+                            <li>可翻译<span class="mainText">中、英、法、韩、日、阿拉伯、西班牙语7种语言</span></li>
+                            <li>还能<span class="mainText">保存用户翻译记录</span>以便之后查看</li>
                         </ol>
                         <div class="linkwrap">
-                            <a class="mainText btnLink" href=""
+                            <a class="mainText btnLink" href="https://github.com/mamba1202/Translation-applet"
                                 target="_blank">项目源码</a>
                             <a class="mainText btnLink"
-                                href=""
+                                href="https://github.com/mamba1202/Translation-applet"
                                 target="_blank">项目预览</a>
                         </div>
                     </ul>
+                </div>
+                <div class="about">
+                    <h2>关于我</h2>
+                    <ol>
+                        <li>熟悉HTML.CSS能够根据设计图像素级完成页面制作</li>
+                        <li>熟悉JavaScript,会使用ES6+常用规范</li>
+                        <li>熟悉Vue常用功能，理解如生命周期，组件，虚拟DOM，数据响应式等概念，能够使用Vue全家桶开发项目</li>
+                        <li>熟悉模块化，工程开发流程，能够简单配置Webpack</li>
+                        <li>有移动端开发经验，会使用REM，vw/vh,响应式等技术制作适配手机设备的页面</li>
+                        <li>了解HTTP相关知识，了解常见的Web性能优化方案</li>
+                        <li>熟练使用VSCode,WebStorm,git等开发工具</li>
+                    </ol>
+                   
                 </div>
             </section>
             <!--<section class="list blog">
