--- a/index.html
+++ b/index.html
@@ -194,89 +194,19 @@
                 <div class="about">
                     <h2>关于我</h2>
                     <ol>
-                        <li>熟悉HTML.CSS能够根据设计图像素级完成页面制作</li>
-                        <li>熟悉JavaScript,会使用ES6+常用规范</li>
-                        <li>熟悉Vue常用功能，理解如生命周期，组件，虚拟DOM，数据响应式等概念，能够使用Vue全家桶开发项目</li>
-                        <li>熟悉模块化，工程开发流程，能够简单配置Webpack</li>
-                        <li>有移动端开发经验，会使用REM，vw/vh,响应式等技术制作适配手机设备的页面</li>
-                        <li>了解HTTP相关知识，了解常见的Web性能优化方案</li>
-                        <li>熟练使用VSCode,WebStorm,git等开发工具</li>
+                        <li>熟悉HTML.CSS能够根据设计图<span class="mainText">像素级</span>完成页面制作</li>
+                        <li>熟悉JavaScript,会使用<span class="mainText">ES6+</span>常用规范</li>
+                        <li>熟悉Vue常用功能，理解如<span class="mainText">生命周期，组件，虚拟DOM，数据响应式</span>等概念，能够使用Vue全家桶开发项目</li>
+                        <li>熟悉<span class="mainText">模块化，工程开发</span>流程，了解Webpack，parcel等打包工具</li>
+                        <li>有移动端开发经验，会使用<span class="mainText">REM，vw/vh,响应式</span>等技术制作适配手机设备的页面</li>
+                        <li>了解<span class="mainText">HTTP</span>相关知识，了解常见的<span class="mainText">Web性能优化</span>方案</li>
+                        <li>熟练使用<span class="mainText">VSCode,WebStorm,Git</span>等开发工具</li>
                     </ol>
                    
                 </div>
             </section>
-            <!--<section class="list blog">
-                <h2>精选博客</h2>
-                <div class="item">
-                    <h3>
-                        <a class="mainText" href="https://zhuanlan.zhihu.com/p/50813566" target="_blank"
-                            rel="noopener noreferrer">
-                            ① 浏览器发送请求的前世今生
-                        </a>
-                    </h3>
-                    <ul class="keyword">关键词：
-                        <li>SRJ</li>,
-                        <li>Jsonp</li>,
-                        <li>Ajax</li>,
-                        <li>CORS</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3 class="title">
-                        <a class="mainText" href="https://zhuanlan.zhihu.com/p/48652245" target="_blank"
-                            rel="noopener noreferrer">
-                            ② 移动端适配方案
-                        </a>
-                    </h3>
-                    <ul class="keyword">关键词：
-                        <li>vw/vh</li>,
-                        <li>flex</li>,
-                        <li>rem/em</li>,
-                        <li>@media</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3>
-                        <a class="mainText" href="https://zhuanlan.zhihu.com/p/50533420" target="_blank"
-                            rel="noopener noreferrer">
-                            ③ JavaScript函数详解
-                        </a>
-                    </h3>
-                    <ul class="keyword flex-wrap">关键词：
-                        <li>this/arguments</li>,
-                        <li>apply/call/bind</li>,
-                        <li>构造函数</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3>
-                        <a class="mainText" href="https://zhuanlan.zhihu.com/p/46093461" target="_blank"
-                            rel="noopener noreferrer">
-                            ④ HTTP 入门
-                        </a>
-                    </h3>
-                    <ul class="keyword flex-wrap">关键词：
-                        <li>URL/URI</li>,
-                        <li>请求/响应格式</li>,
-                        <li>常用HTTP状态码</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3>
-                        <a class="mainText" href="https://zhuanlan.zhihu.com/p/54820029" target="_blank" rel="noopener">
-                            ⑤ Vue 组件之间的数据通信
-                        </a>
-                    </h3>
-                    <ul class="keyword flex-wrap">关键词：
-                        <li>prop</li>,
-                        <li>eventHub</li>,
-                        <li>v-model</li>,
-                        <li>sync</li>
-                    </ul>
-                </div>
-            </section>
-            -->
         </main>
+        <a href="https://mamba1202.github.io/my-resume/" target="_blank" class="go">在线简历</a>
         <svg style="display:none">
             <symbol id="icon-phone" viewBox="0 0 1024 1024">
                 <path
