--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <aside>
             <div class="avatar">
-                <img src="./img/mamba.jpg" alt="mamba">
+                <img src="/img/mamba.jpg" alt="mamba">
             </div>
 
             <section>
