--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <aside>
             <div class="avatar">
-                <img src="./mamba.jpg" alt="mamba">
+                <img src="./img/mamba.jpg" alt="mamba">
             </div>
 
             <section>
@@ -113,6 +113,7 @@
                 <h2>项目经历</h2>
                 <div class="item">
                     <h3>① 咕噜UI</h3>
+                    <img src="./img/咕噜.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对前端工程化流程以及单元测试重要性的深刻理解</span></ol>
@@ -134,6 +135,7 @@
                 </div>
                 <div class="item">
                     <h3>② 有赞商城</h3>
+                    <img src="./img/yz.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol>仿移动端有赞商城，使用mock数据，支持地址编辑，购物车结算，查看商品，搜索商品及店铺等功能</ol>
@@ -157,6 +159,7 @@
                 </div>
                 <div class="item">
                     <h3>③Cnode</h3>
+                    <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol>该项目使用 Vue 还原 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用 Axios 获取数据，使用 Vue Router 进行前端路由的切换及传参，使用 watch 监听路由的变化，Webpack 打包。</ol>
@@ -174,6 +177,7 @@
                 </div>
                 <div class="item">
                     <h3>④ 翻译猿</h3>
+                    <img src="./img/fy.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol>一款提供翻译功能的微信小程序，该项目以百度翻译 API 为服务器域名提供支持，主要包含翻译首页、语言列表页和翻译历史页。项目逻辑简单，页面清新，提供了近 7 种语言选择，欢迎尝试</ol>
@@ -206,7 +210,7 @@
                 </div>
             </section>
         </main>
-        <a href="https://mamba1202.github.io/my-resume/" target="_blank" class="go">在线简历</a>
+        <a href="https://mamba1202.github.io/my-resume/" target="_blank" class="go">在线PDF简历</a>
         <svg style="display:none">
             <symbol id="icon-phone" viewBox="0 0 1024 1024">
                 <path
