--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/phone.css" media="(max-width:425px)">
     <title>前端-张哲-2019</title>
 </head>
 
@@ -113,7 +114,7 @@
                 <h2>项目经历</h2>
                 <div class="item">
                     <h3>① 咕噜UI</h3>
-                    <img src="./img/咕噜.png" height="280" width="590" alt="">
+                   <img src="./img/咕噜.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对前端工程化流程以及单元测试重要性的深刻理解</span></ol>
