--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>* HTML5,CSS3,JavaScript</p>
                     <p>* Vue.js,Vue-router,Vuex,Axios</p>
                     <p>* ES6,Sass.Less</p>
-                    <p>* Webpack,Parcel,Npm Script</p>
+                    <p>* Webpack,Parcel </p>
                     <p>* 对前端有浓厚的兴趣</p>
                 </div>
             </section>
@@ -117,10 +117,10 @@
                    <img src="./img/咕噜.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对前端工程化流程以及单元测试重要性的深刻理解</span></ol>
+                        <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对<span class="mainText">前端工程化</span>流程以及<span class="mainText">单元测试</span>重要性的深刻理解</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li class="mainText">使用知识：Vue.js/ ES6/ SCSS/ Parcel/ Npm Scripts/ Mocha/ TravisCI /VuePress</li>
+                            <li class="mainText">技术栈：Vue.js/ ES6/ SCSS/ Parcel/ Npm Scripts/ Mocha/ TravisCI /VuePress</li>
                             <li>使用 <span class="mainText">Mocha</span> 进行<span class="mainText"> 单元测试</span></li>
                             <li>使用 <span class="mainText">使用 TravisCI</span> 实现，<span class="mainText">持续集成</span></li>
                             <li>使用 <span class="mainText">VuePress</span> 为基础制作官方文档</li>
@@ -139,10 +139,10 @@
                     <img src="./img/yz.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>仿移动端有赞商城，使用mock数据，支持地址编辑，购物车结算，查看商品，搜索商品及店铺等功能</ol>
+                        <ol>仿移动端有赞商城，使用<span class="mainText">mock</span>数据，支持地址编辑，购物车结算，查看商品，搜索商品等功能</ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li class="mainText">使用语言：vue + axios + vuex + vue-router + sass + eslint + es6</li>
+                            <li class="mainText">技术栈：Vue.js + Axios + Vuex + Vue-Router + ES6</li>
                             <li>使用 <span class="mainText">vue-cli3</span> 进行原型开发并配置 vue.config.js</li>
                             <li>使用 <span class="mainText">vuex 进行地址状态管理</span>，支持增删改查</li>
                             <li>使用 <span class="mainText">axios + promise</span> 异步请求</li>
@@ -163,7 +163,7 @@
                     <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>该项目使用 Vue 还原 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用 Axios 获取数据，使用 Vue Router 进行前端路由的切换及传参，使用 watch 监听路由的变化，Webpack 打包。</ol>
+                        <ol>该项目使用 Vue 还原 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用<span class="mainText">Axios </span> 获取数据，使用 <span class="mainText">Vue Router</span> 进行前端路由的切换及传参，使用 <span class="mainText">watch</span> 监听路由的变化，Webpack 打包。</ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li>技术栈: <span class="mainText">Vue CLI/ Vue2/ Vue Router/ Axios/ ES6/ Npm/ SCSS</span></li>
@@ -181,7 +181,7 @@
                     <img src="./img/fy.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>一款提供翻译功能的微信小程序，该项目以百度翻译 API 为服务器域名提供支持，主要包含翻译首页、语言列表页和翻译历史页。项目逻辑简单，页面清新，提供了近 7 种语言选择，欢迎尝试</ol>
+                        <ol>一款提供翻译功能的微信小程序，该项目以百度翻译 API 为服务器域名提供支持，主要包含<span class="mainText">翻译首页、语言列表页和翻译历史页。</span>项目逻辑简单，页面清新，提供了近 7 种语言选择，欢迎尝试</ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li>可翻译<span class="mainText">中、英、法、韩、日、阿拉伯、西班牙语7种语言</span></li>
