--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>该项目使用 Vue 还原 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用<span class="mainText">Axios </span> 获取数据，使用 <span class="mainText">Vue Router</span> 进行前端路由的切换及传参，使用 <span class="mainText">watch</span> 监听路由的变化，Webpack 打包。</ol>
+                        <ol>该项目使用 Vue 还原 PC端 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用<span class="mainText">Axios </span> 获取数据，使用 <span class="mainText">Vue Router</span> 进行前端路由的切换及传参，使用 <span class="mainText">watch</span> 监听路由的变化，Webpack 打包。</ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li>技术栈: <span class="mainText">Vue CLI/ Vue2/ Vue Router/ Axios/ ES6/ Npm/ SCSS</span></li>
