--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                    <img src="./img/咕噜.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对<span class="mainText">前端工程化</span>流程以及<span class="mainText">单元测试</span>重要性的深刻理解</span></ol>
+                        <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持<span class="mainText"> 按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴</span>等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对<span class="mainText">前端工程化</span>流程以及<span class="mainText">单元测试</span>重要性的深刻理解</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li class="mainText">技术栈：Vue.js/ ES6/ SCSS/ Parcel/ Npm Scripts/ Mocha/ TravisCI /VuePress</li>
@@ -159,14 +159,14 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>③Cnode</h3>
+                    <h3>③CNode</h3>
                     <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol>该项目使用 Vue 还原 PC端 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用<span class="mainText">Axios </span> 获取数据，使用 <span class="mainText">Vue Router</span> 进行前端路由的切换及传参，使用 <span class="mainText">watch</span> 监听路由的变化，Webpack 打包。</ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li>技术栈: <span class="mainText">Vue CLI/ Vue2/ Vue Router/ Axios/ ES6/ Npm/ SCSS</span></li>
+                            <li>技术栈: <span class="mainText">Vue CLI/ Vue2/ Vue Router/ Axios/ ES6/ Npm</span></li>
                             <li>使用<span class="mainText"> Vue Router 进行前端路由的切换及传参</span>进行页面跳转</li>
                         </ol>
                         <div class="linkwrap">
@@ -201,7 +201,7 @@
                     <ol>
                         <li>熟悉HTML.CSS能够根据设计图<span class="mainText">像素级</span>完成页面制作</li>
                         <li>熟悉JavaScript,会使用<span class="mainText">ES6+</span>常用规范</li>
-                        <li>熟悉Vue常用功能，理解如<span class="mainText">生命周期，组件，虚拟DOM，数据响应式</span>等概念，能够使用Vue全家桶开发项目</li>
+                        <li>熟悉Vue常用功能，理解如<span class="mainText">生命周期，组件，数据响应式</span>等概念，能够使用Vue全家桶开发项目</li>
                         <li>熟悉<span class="mainText">模块化，工程开发</span>流程，了解Webpack，parcel等打包工具</li>
                         <li>有移动端开发经验，会使用<span class="mainText">REM，vw/vh,响应式</span>等技术制作适配手机设备的页面</li>
                         <li>了解<span class="mainText">HTTP</span>相关知识，了解常见的<span class="mainText">Web性能优化</span>方案</li>
