--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <img src="./img/yz.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>仿移动端有赞商城，使用<span class="mainText">mock</span>数据，支持地址编辑，购物车结算，查看商品，搜索商品等功能</ol>
+                        <ol>仿移动端有赞商城，使用<span class="mainText">mock</span>数据，支持地址编辑，购物车结算，查看商品等功能</ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li class="mainText">技术栈：Vue.js + Axios + Vuex + Vue-Router + ES6</li>
