--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>② 有赞商城</h3>
+                    <h3>② 移动端购物商城</h3>
                     <img src="./img/yz.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
@@ -159,7 +159,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>③CNode</h3>
+                    <h3>③ CNode</h3>
                     <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
@@ -196,8 +196,28 @@
                         </div>
                     </ul>
                 </div>
+                <div class="item">
+                    <h3>⑤ Canvas在线画板</h3>
+                    <img src="./img/hb.png" height="280" width="590" alt="">
+                    <ul>
+                        <span class="title">项目简介:</span>
+                        <ol>该项目是一个简易的在线画板，主要使用原生JS配合Canvas API实现提供支持</ol>
+                        <p class="title">项目总结：</p>
+                        <ol>
+                            <li><span class="mainText">支持触屏设备</span></li>
+                            <li><span class="mainText">具有橡皮擦、画笔颜色、画笔粗细切换以及作品下载等功能</span></li>
+                        </ol>
+                        <div class="linkwrap">
+                            <a class="mainText btnLink" href="https://github.com/mamba1202/canvas"
+                                target="_blank">项目源码</a>
+                            <a class="mainText btnLink"
+                                href="https://mamba1202.github.io/canvas/"
+                                target="_blank">项目预览</a>
+                        </div>
+                    </ul>
+                </div>
                 <div class="about">
-                    <h2>关于我</h2>
+                    <h2>技能详情</h2>
                     <ol>
                         <li>熟悉HTML.CSS能够根据设计图<span class="mainText">像素级</span>完成页面制作</li>
                         <li>熟悉JavaScript,会使用<span class="mainText">ES6+</span>常用规范</li>
@@ -206,6 +226,15 @@
                         <li>有移动端开发经验，会使用<span class="mainText">REM，vw/vh,响应式</span>等技术制作适配手机设备的页面</li>
                         <li>了解<span class="mainText">HTTP</span>相关知识，了解常见的<span class="mainText">Web性能优化</span>方案</li>
                         <li>熟练使用<span class="mainText">VSCode,WebStorm,Git</span>等开发工具</li>
+                    </ol>
+                </div>
+                <div class="about">
+                    <h2>关于我</h2>
+                    <ol>
+                        <li>本人在今年毕业，出于自身职业考虑以及兴趣爱好，于是选择前端开发</li>
+                        <li>通过从事相关行业朋友的指导，利用业余时间通过书籍和在线视频自学前端相关知识。</li>
+                        <li>学习过程中能够通过阅读中英文文档和Google查询报错信息来解决遇到的问题。</li>
+                        <li>平时通过开发各种轻项目来加深相关知识的理解，今后打算从事前端开发工作。</li>
                     </ol>
                    
                 </div>
