--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <img src="./img/yz.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>仿移动端有赞商城，使用<span class="mainText">mock</span>数据，支持地址编辑，购物车结算，查看商品等功能</ol>
+                        <ol>仿移动端有赞商城支持地址编辑，购物车结算，查看商品等功能. 并且使用<span class="mainText">easy mock</span>生成模拟数据实现前后端分离，地址管理界面使用Vue-router实现前端路由并配合<span class="mainText">Vuex进行状态管理</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
                             <li class="mainText">技术栈：Vue.js + Axios + Vuex + Vue-Router + ES6</li>
@@ -159,14 +159,14 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>③ CNode</h3>
+                    <h3>③ CNode社区</h3>
                     <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
-                        <ol>该项目使用 Vue 还原 PC端 CNode 官方社区，项目调用 CNode 官方社区提供的 API，以 Vue CLI 创建项目模版，使用<span class="mainText">Axios </span> 获取数据，使用 <span class="mainText">Vue Router</span> 进行前端路由的切换及传参，使用 <span class="mainText">watch</span> 监听路由的变化，Webpack 打包。</ol>
+                        <ol>该项目是参照CNode社区及官方提供的API，使用Vue-cli搭建的<span class="mainText">单页面应用</span>,目前包含帖子列表，帖子详情，用户详情等功能，主要依靠<span class="mainText">列表渲染，Axios请求，Vue-router导航实现</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li>技术栈: <span class="mainText">Vue CLI/ Vue2/ Vue Router/ Axios/ ES6/ Npm</span></li>
+                            <li>技术栈: <span class="mainText">Vue CLI/ Vue.js/ Vue Router/ Axios/ ES6/ Npm</span></li>
                             <li>使用<span class="mainText"> Vue Router 进行前端路由的切换及传参</span>进行页面跳转</li>
                         </ol>
                         <div class="linkwrap">
