--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <ol> 仿该项目是参照 Framework7、Ant Design、Element UI、iView 等 UI 库思路，做的一个基于 Vue 的简易 UI 组件库，目前已支持<span class="mainText"> 按钮、输入框、网格、布局、Toast、Tabs、Popover、手风琴</span>等组件。完成该项目使我对 Vue 的常用特征更加熟悉，同时提升了自己对<span class="mainText">前端工程化</span>流程以及<span class="mainText">单元测试</span>重要性的深刻理解</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li class="mainText">技术栈：Vue.js/ ES6/ SCSS/ Parcel/ Npm Scripts/ Mocha/ TravisCI /VuePress</li>
+                            <li>技术栈:<span class="mainText"> ES6/ SCSS/ Parcel/ Npm Scripts/ Mocha/ TravisCI /VuePress</span></li>
                             <li>使用 <span class="mainText">Mocha</span> 进行<span class="mainText"> 单元测试</span></li>
                             <li>使用 <span class="mainText">使用 TravisCI</span> 实现，<span class="mainText">持续集成</span></li>
                             <li>使用 <span class="mainText">VuePress</span> 为基础制作官方文档</li>
@@ -142,8 +142,7 @@
                         <ol>仿移动端有赞商城支持地址编辑，购物车结算，查看商品等功能. 并且使用<span class="mainText">easy mock</span>生成模拟数据实现前后端分离，地址管理界面使用Vue-router实现前端路由并配合<span class="mainText">Vuex进行状态管理</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li class="mainText">技术栈：Vue.js + Axios + Vuex + Vue-Router + ES6</li>
-                            <li>使用 <span class="mainText">vue-cli3</span> 进行原型开发并配置 vue.config.js</li>
+                            <li>技术栈：<sapn class="mainText">Vue.js/ Axios/ Vuex/ Vue-Router/ ES6</sapn></li>
                             <li>使用 <span class="mainText">vuex 进行地址状态管理</span>，支持增删改查</li>
                             <li>使用 <span class="mainText">axios + promise</span> 异步请求</li>
                             <li>使用 mock.js 进行<span class="mainText">数据模拟,</span>在 easy-mock平台<span
@@ -159,14 +158,33 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>③ CNode社区</h3>
+                    <h3>③ 后台管理系统</h3>
+                    <img src="./img/jl.png" height="280" width="590" alt="">
+                    <ul>
+                        <span class="title">项目简介:</span>
+                        <ol>该项目是用Vue-CLI3.0搭建的<span class="mainText">单页面后台管理系统</span>,前端采用<span class="mainText"> Element UI 框架</span> 实现分页以及筛选等功能,配合MongoDB实现数据库的增删改查基本功能</ol>
+                        <p class="title">项目总结：</p>
+                        <ol>
+                            <li>技术栈: <span class="mainText">Vue CLI/ Vue-Router/ node.js/ MongoDB/ Axios/ jwt/ ES6/</span></li>
+                            <li>使用<span class="mainText"> axios</span>拦截器对请求及响应进行预处理</li>
+                            <li>后台采用<span class="mainText"> Express框架</span>来配置路由发送响应</li>
+                        </ol>
+                        <div class="linkwrap">
+                            <a class="mainText btnLink" href="https://github.com/mamba1202/node-vue-ele-app"
+                                target="_blank">项目源码</a>
+                            <a class="mainText btnLink" href="https://enigmatic-sierra-15277.herokuapp.com/login" target="_blank">项目预览</a>
+                        </div>
+                    </ul>
+                </div>
+                <div class="item">
+                    <h3>④ CNode社区</h3>
                     <img src="./img/cnode.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol>该项目是参照CNode社区及官方提供的API，使用Vue-cli搭建的<span class="mainText">单页面应用</span>,目前包含帖子列表，帖子详情，用户详情等功能，主要依靠<span class="mainText">列表渲染，Axios请求，Vue-router导航实现</span></ol>
                         <p class="title">项目总结：</p>
                         <ol>
-                            <li>技术栈: <span class="mainText">Vue CLI/ Vue.js/ Vue Router/ Axios/ ES6/ Npm</span></li>
+                            <li>技术栈: <span class="mainText">Vue CLI/ Vue.js/ Vue-Router/ Axios/ ES6/ Npm</span></li>
                             <li>使用<span class="mainText"> Vue Router 进行前端路由的切换及传参</span>进行页面跳转</li>
                         </ol>
                         <div class="linkwrap">
@@ -177,7 +195,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>④ 翻译猿</h3>
+                    <h3>⑤ 翻译猿</h3>
                     <img src="./img/fy.jpg" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
@@ -192,26 +210,6 @@
                                 target="_blank">项目源码</a>
                             <a class="mainText btnLink"
                                 href="https://github.com/mamba1202/Translation-applet"
-                                target="_blank">项目预览</a>
-                        </div>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h3>⑤ Canvas在线画板</h3>
-                    <img src="./img/hb.png" height="280" width="590" alt="">
-                    <ul>
-                        <span class="title">项目简介:</span>
-                        <ol>该项目是一个简易的在线画板，主要使用原生JS配合Canvas API实现提供支持</ol>
-                        <p class="title">项目总结：</p>
-                        <ol>
-                            <li><span class="mainText">支持触屏设备</span></li>
-                            <li><span class="mainText">具有橡皮擦、画笔颜色、画笔粗细切换以及作品下载等功能</span></li>
-                        </ol>
-                        <div class="linkwrap">
-                            <a class="mainText btnLink" href="https://github.com/mamba1202/canvas"
-                                target="_blank">项目源码</a>
-                            <a class="mainText btnLink"
-                                href="https://mamba1202.github.io/canvas/"
                                 target="_blank">项目预览</a>
                         </div>
                     </ul>
