--- a/index.html
+++ b/index.html
@@ -219,10 +219,11 @@
                     <ol>
                         <li>熟悉HTML.CSS能够根据设计图<span class="mainText">像素级</span>完成页面制作</li>
                         <li>熟悉JavaScript,会使用<span class="mainText">ES6+</span>常用规范</li>
-                        <li>熟悉Vue常用功能，理解如<span class="mainText">生命周期，组件，数据响应式</span>等概念，能够使用Vue全家桶开发项目</li>
+                        <li>熟悉Vue常用功能，理解如<span class="mainText">生命周期，组件，响应式原理等概念</span>等概念，能够使用Vue全家桶开发项目</li>
                         <li>熟悉<span class="mainText">模块化，工程开发</span>流程，了解Webpack，parcel等打包工具</li>
                         <li>有移动端开发经验，会使用<span class="mainText">REM，vw/vh,响应式</span>等技术制作适配手机设备的页面</li>
                         <li>了解<span class="mainText">HTTP</span>相关知识，了解常见的<span class="mainText">Web性能优化</span>方案</li>
+                        <li>了解Node.js，能够使用<span class="mainText">Express框架</span>搭建后台，实现登录、注册，后端路由等基础功能</li>
                         <li>熟练使用<span class="mainText">VSCode,WebStorm,Git</span>等开发工具</li>
                     </ol>
                 </div>
