--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="item">
                     <h3>③ 后台管理系统</h3>
-                    <img src="./img/jl.png" height="280" width="590" alt="">
+                    <img src="./img/gl.png" height="280" width="590" alt="">
                     <ul>
                         <span class="title">项目简介:</span>
                         <ol>该项目是用Vue-CLI3.0搭建的<span class="mainText">单页面后台管理系统</span>,前端采用<span class="mainText"> Element UI 框架</span> 实现分页以及筛选等功能,配合MongoDB实现数据库的增删改查基本功能</ol>
